--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,48 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+/* ContactForm.css */
+.contact-form {
+  font-family: "ysabeau", Arial, Helvetica, sans-serif;
+  margin: 5%;
+  margin-bottom: 80px;
+  font-size: 1.3rem;
+  flex-direction: column;
+}
+
+.form-input {
+  font-family: "ysabeau", Arial, Helvetica, sans-serif;
+  font-size: 1.3rem;
+  height: 35px;
+  width: 350px;
+}
+
+.form-input-textarea {
+  font-family: "ysabeau", Arial, Helvetica, sans-serif;
+  font-size: 1.3rem;
+  height: 200px;
+  width: 600px;
+}
+
+.subButton {
+  margin: 2rem 0;
+  background-color: #D5B4B4;
+  color: black;
+  border: none;
+  font-size: 1rem;
+  padding: 0.5rem 1rem;
+  border-radius: 1.5px;
+}
+
+.subButton:hover {
+  background-color: #867070;
+  color: white;
+}
+
+.subButton:disabled {
+  background-color: #E4D0D0;
+  color: white;
+  cursor: not-allowed;
+}
