--- a/src/App.css
+++ b/src/App.css
@@ -44,22 +44,17 @@
 
 .navbar {
   position: fixed;
-  /* Fixed to the top */
   top: 0;
   left: 0;
   width: 100%;
   height: 20px;
-  /* Full width */
   background-color: green;
-  /* Updated background color to green */
   padding: 10px 0;
-  /* Adjust the padding as needed */
   display: flex;
-  /* Make links display horizontally */
   justify-content: space-around;
-  /* Space links evenly between them */
   align-items: center;
-  /* Center links vertically */
+  z-index: 1000;
+  /* Set a high z-index value */
 }
 
 .nav-link {
