--- a/src/App.css
+++ b/src/App.css
@@ -42,34 +42,6 @@
   }
 }
 
-.navbar {
-  position: fixed;
-  /* Fixed to the top */
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 20px;
-  /* Full width */
-  background-color: green;
-  /* Updated background color to green */
-  padding: 10px 0;
-  /* Adjust the padding as needed */
-  display: flex;
-  /* Make links display horizontally */
-  justify-content: space-around;
-  /* Space links evenly between them */
-  align-items: center;
-  /* Center links vertically */
-}
-
-.nav-link {
-  text-decoration: none;
-  /* Remove underline */
-  color: #fff;
-  /* Text color */
-  font-size: 16px;
-  /* Adjust font size as needed */
-}
 
 
 
@@ -158,4 +130,49 @@
   animation-timing-function: linear;
   animation-delay: .9s;
   animation-fill-mode: forwards;
+}
+
+/* Navbar */
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 20px;
+  background-color: green;
+  padding: 10px 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  z-index: 1000;
+}
+
+.nav-link {
+  text-decoration: none;
+  color: #fff;
+  font-size: 16px;
+}
+
+/* Autocomplete */
+.autocomplete {
+  margin-top: 80px;
+  /* Adjust as needed */
+  z-index: 3000;
+  /* Lower z-index to position it below the navbar */
+}
+
+/* Map */
+.map {
+  /* Add styles for the Map component here */
+  z-index: 100;
+}
+
+/* Button in the top left corner */
+.button-corner {
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  z-index: 2000;
+  /* Higher z-index to be on top */
+  margin-top: 40px;
 }
