--- a/src/App.css
+++ b/src/App.css
@@ -139,7 +139,7 @@
   left: 0;
   width: 100%;
   height: 20px;
-  background-color: green;
+  background-color: #8bc34a;
   padding: 10px 0;
   display: flex;
   justify-content: space-around;
