--- a/src/index.css
+++ b/src/index.css
@@ -72,7 +72,7 @@ label {
 
 /* Style for submit button */
 .subButton {
-  background-color: #D5B4B4;
+  background-color: #C5E1A5;
   color: black;
   border: none;
   font-size: 1rem;
