--- a/src/App.css
+++ b/src/App.css
@@ -179,3 +179,13 @@
   /* Higher z-index to be on top */
   margin-top: 80px;
 }
+
+.select_class {
+  height: 50px;
+}
+
+.loading-page {
+  width: 100%;
+  height: 100vh;
+  background: #fff
+}
