--- a/src/index.css
+++ b/src/index.css
@@ -141,3 +141,36 @@ section {
 }
 
 /* Add any other necessary styling for your form groups */
+
+/* Add styles for the loading-page container */
+.loading-page {
+  /* Background color */
+  color: #003943;
+  /* Text color */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  text-align: center;
+}
+
+/* Style for the company name */
+.company-name {
+  font-family: "ysabeau";
+  font-size: 2.5rem;
+  /* Increase font size */
+  font-weight: bold;
+  margin-bottom: 20px;
+  /* Add spacing below the company name */
+  text-transform: uppercase;
+  /* Uppercase text */
+}
+
+/* Style for the slogan */
+.slogan {
+  font-family: "ysabeau";
+  font-size: 1.2rem;
+  margin-top: 20px;
+  /* Add spacing above the slogan */
+}
