--- a/src/index.css
+++ b/src/index.css
@@ -175,3 +175,16 @@ section {
   margin-top: 20px;
   /* Add spacing above the slogan */
 }
+
+.black_border {
+  border: 0.5px solid black;
+  margin: 1px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-bottom: 20px;
+}
+
+
+.subButton {
+  margin-bottom: 20px;
+}
